<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E42165"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:weightSum="5">

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:gravity="center"
            android:layout_weight="0.2" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"       
    android:layout_weight="1" >

    <ImageView
        android:id="@+id/log_imageView"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
     android:paddingLeft="20dp"
        android:gravity="center"
        android:src="@drawable/log" />
</LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:textColor="#FFFFFF"
                android:textStyle="normal"
                android:layout_marginBottom="10dp"
                android:text="@string/main_menu" />

    <LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_weight="1"
    android:weightSum="2">
            <TextView
                android:id="@+id/my_time_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:gravity="end"
              android:textStyle="normal"
              android:typeface="normal"
           android:layout_marginEnd="10dp"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
            
                <ImageView
                    android:id="@+id/wifi_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="end"
                    android:src="@drawable/wifi_status_on" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4.5" 
            android:weightSum="3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/wifi_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"             
                android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center"
                android:src="@drawable/wifi" />

            <ImageView
                android:id="@+id/entertainment_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"      
                android:layout_weight="1"
                      android:adjustViewBounds="true"
                    android:layout_gravity="center"
                android:src="@drawable/entertainment" />

            <ImageView
                android:id="@+id/settings_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                      android:adjustViewBounds="true"
                    android:layout_gravity="center"
                android:src="@drawable/settings" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:weightSum="3"
            android:gravity="center"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/wifi_textView"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="25sp"
                   android:textColor="#FFFFFF"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/wifi" />

            <TextView
                android:id="@+id/Entertainment_textView"
                android:layout_weight="1"
             android:gravity="center"
             android:textSize="25sp"
                android:textColor="#FFFFFF"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/entertainment" />

            <TextView
                android:id="@+id/setting_textView"
                android:layout_weight="1"
                   android:gravity="center"
                      android:textColor="#FFFFFF"
                android:textStyle="normal"
                android:layout_width="match_parent"  
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:text="@string/settings" />

        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>