<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E42165"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/log_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="20dp"
                    android:src="@drawable/log" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|top"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TextClock
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="right|center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/wifi_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/wifi_status_on"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/terms_focus_on" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/header"
                        android:textColor="#FFFFFF"
                        android:textSize="40sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <com.ethicstech.ubox.Scroll.ScrollViewExt
                            android:id="@+id/scrollView1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fadeScrollbars="false"
                            android:scrollbarThumbVertical="@drawable/terms_scrollbar_vertical_thumb"
                            android:scrollbarTrackVertical="@drawable/terms_scrollbar_vertical_track" >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="30dp"
                                android:layout_marginRight="30dp"
                                android:orientation="vertical" >

                                <TextView
                                    android:id="@+id/paragraph"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:lineSpacingExtra="3dp"
                                    android:text="@string/praragraph"
                                    android:textColor="#000000"
                                    android:textSize="20sp"
                                    android:typeface="normal" />
                            </LinearLayout>
                        </com.ethicstech.ubox.Scroll.ScrollViewExt>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                 android:gravity="left"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/disagree_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/terms_focus_off"
                    android:focusable="true"
                    android:padding="10dp"
                    android:text="@string/dontagree"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="right"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/agree_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:background="@drawable/terms_focus_off"
                    android:focusable="true"
                    android:text="@string/agree"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    android:textStyle="normal" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>